@@ -1,3 +1,8 @@
+2008-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-mouse-safe-view-this-url): Remove redundant confirmation
+	of whether to follow link.
+
 2008-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-doc-view-content-types): New variable.
